<resources>
    <string name="app_name">Vaccap</string>
    <string name="don_t_have_an_account_signup">don_t_have_an_account_signup</string>
    <string name="a_bottle_holding_a_needle">a_bottle_holding_a_needle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account sign up</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_registered_email">Enter your registered email</string>
    <string name="please_enter_your_registered_email_to_receive_password_reset_link">Please enter your registered email to receive password reset link</string>
    <string name="email">Email*</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="entre_your_email_adress">Entre your Email adress</string>
    <string name="back_to_login">Back to Login</string>
    <string name="appointement">Appointement</string>
    <string name="more_information">More Information</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="appointments">Appointments</string>
    <string name="home">Home</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="date_of_birth">date of birth</string>
    <string name="baby_s_birthday">Baby\'s birthday</string>
    <string name="rajaa">Rajaa</string>
    <string name="user_name">User Name</string>
    <string name="first_name">first name</string>
    <string name="raja">Raja</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="baby_s_name">Baby\'s Name</string>
    <string name="accept">Accept</string>
    <string name="appointment_date">Appointment date</string>
    <string name="vaccine_type">vaccine Type</string>
    <string name="appointment_time">Appointment time</string>
    <string name="decline">Decline</string>
    <string name="clinic_name">Clinic name</string>
    <string name="declined_appointments_list">Declined Appointments list</string>
    <string name="accepted_appointments_list">Accepted Appointments list</string>
    <string name="tab_layout">tab layout</string>
    <string name="view_pager">view pager</string>
    <string name="patients">Patients</string>
    <string name="about_baby_vaccinations">About Baby Vaccinations</string>
    <string name="vaccinations_for_babies_are_determined_by_the_who_and_cdc_and_are_important_to_protect_against_serious_diseases_recommended_vaccines_include_measles_mumps_rubella_polio_hepatitis_b_and_chickenpox_vaccines_are_tested_for_safety_and_some_require_booster_shots_to_maintain_immunity_vaccinations_also_provide_herd_immunity_to_protect_the_community_while_side_effects_can_occur_they_are_typically_mild_and_serious_side_effects_are_rare">Vaccinations for babies are determined by the WHO and CDC and are important to protect against serious diseases. Recommended vaccines include measles, mumps, rubella, polio, hepatitis B, and chickenpox. Vaccines are tested for safety and some require booster shots to maintain immunity. Vaccinations also provide herd immunity to protect the community. While side effects can occur, they are typically mild and serious side effects are rare.</string>
    <string name="vaccination_image">Vaccination image</string>
    <string name="why_vaccinations_are_important">Why Vaccinations are Important</string>
    <string name="vaccination_is_important_because_it_protects_individuals_from_serious_and_life_threatening_diseases_prevents_outbreaks_provides_herd_immunity_is_cost_effective_and_can_lead_to_the_eradication_of_diseases_by_vaccinating_individuals_and_communities_can_improve_health_outcomes_and_reduce_the_burden_of_vaccine_preventable_diseases">Vaccination is important because it protects individuals from serious and life-threatening diseases, prevents outbreaks, provides herd immunity, is cost-effective, and can lead to the eradication of diseases. By vaccinating, individuals and communities can improve health outcomes and reduce the burden of vaccine-preventable diseases.</string>
    <string name="disease_image">Disease image</string>
    <string name="call_to_action">Call to Action</string>
    <string name="find_a_vaccination_center">Find a Vaccination Center</string>
    <string name="protect_your_child">Protect your child</string>

    <string-array name="vaccines">
        <item>New Born</item>
        <item>2 Months</item>
        <item>4 Months</item>
        <item>6 Months</item>
        <item>8 Months</item>
        <item>12 Months</item>
        <item>15 Months</item>
    </string-array>
</resources>