<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#EAE7C8"
        android:padding="16dp">

        <TextView
            android:id="@+id/appointment_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/appointment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointment_date"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/appointment_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointment_time"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/appointment_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vaccine_type"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/accept_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/green_drk"
                android:text="@string/accept"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/decline_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/green_drk"
                android:text="@string/decline"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>