<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/pbackground"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="60dp"
        android:layout_marginTop="72dp"
        android:adjustViewBounds="false"
        android:src="@drawable/baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

    <TextView
        android:id="@+id/titleUserName"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/rajaa"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/profileImg"
        app:layout_constraintStart_toStartOf="@+id/profileImg"
        app:layout_constraintTop_toBottomOf="@+id/profileImg"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/titleLFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/raja"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/titleUserName"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/titleUserName"
        app:layout_constraintTop_toBottomOf="@+id/titleUserName" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@color/cardview_light_background"
        android:elevation="5dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLFullName">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:padding="18dp">

            <TextView
                android:id="@+id/userNamepr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userNameSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/first_name"
                android:textAlignment="viewEnd"
                android:textColor="#757575"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:padding="18dp">

            <TextView
                android:id="@+id/fullNamepr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/full_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fullNameSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="full name"
                android:textAlignment="viewEnd"
                android:textColor="#757575"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:padding="18dp">

            <TextView
                android:id="@+id/phoneNumbertt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone_number"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fullNamesignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="phone number"
                android:textAlignment="viewEnd"
                android:textColor="#757575"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:elevation="@dimen/cardview_compat_inset_shadow"
            android:orientation="horizontal"
            android:padding="18dp">

            <TextView
                android:id="@+id/namebabytt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/baby_s_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nameBabySignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="baby's name"
                android:textAlignment="viewEnd"
                android:textColor="#757575"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:elevation="@dimen/cardview_compat_inset_shadow"
            android:orientation="horizontal"
            android:padding="18dp">

            <TextView
                android:id="@+id/birthDatett"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/baby_s_birthday"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateOfBirthSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_of_birth"
                android:textAlignment="viewEnd"
                android:textColor="#757575"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editProfileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="13dp"
        android:text="@string/edit_profile"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>