<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pbackground"
    tools:context=".ui.profile.EditProfileActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:background="@color/cardview_light_background"
        android:elevation="5dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUpdateProfile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/userNamepr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edituserNamepr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="username"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="user name"
                android:textAlignment="viewEnd"
                android:textColor="#757575"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/fullNamepr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/full_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editFullNamepr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="full name"
                android:textAlignment="viewEnd"
                android:textColor="#757575"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/phoneNumbertt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone_number"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editPhoneNumberpr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="phone"
                android:inputType="phone"
                android:minHeight="48dp"
                android:text="phone number"
                android:textAlignment="viewEnd"
                android:textColor="#757575"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:elevation="@dimen/cardview_compat_inset_shadow"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/namebabytt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/baby_s_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editNameBabypr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="baby's name"
                android:textAlignment="viewEnd"
                android:textColor="#757575"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:elevation="@dimen/cardview_compat_inset_shadow"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/birthDatett"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/baby_s_birthday"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editDateOfBirthpr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="date"
                android:minHeight="48dp"
                android:text="@string/date_of_birth"
                android:textAlignment="viewEnd"
                android:textColor="#757575"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="208dp"
        android:layout_height="65dp"
        android:layout_marginTop="32dp"
        android:text="Update"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tvUpdateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="Update Profile"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>