<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_vaccap"
    tools:context=".ui.authentication.LoginActivity">

 <TextView
     android:id="@+id/tv_signupLink"
     android:gravity="center"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="64dp"
     android:layout_marginBottom="50dp"
     android:clickable="true"
     android:focusable="true"
     android:minHeight="48dp"
     android:shadowColor="@color/black"
     android:text="@string/don_t_have_an_account_sign_up"
     android:textAlignment="center"
     android:textAppearance="@style/TextAppearance.AppCompat.Body2"
     android:textColor="#00796B"
     android:textSize="18sp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/signup_btn" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/a_bottle_holding_a_needle"
        android:src="@drawable/vaccinelogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vaccinelogin"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="350dp"
        android:textColor="@color/white"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#009688"
        android:text="Sign in"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        tools:ignore="DuplicateSpeakableTextCheck,HardcodedText,TextContrastCheck,VisualLintButtonSize" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:drawableTint="@color/green_drk"
        android:hint="Password"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="HardcodedText,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="Email"
        android:background="#FFFFFF"
        android:drawableStart="@drawable/male_user_90___"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:drawableTint="@color/green_drk"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        tools:ignore="HardcodedText,VisualLintTextFieldSize" />

   <TextView
       android:id="@+id/reset_password"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="50dp"
       android:layout_marginTop="10dp"
       android:layout_marginBottom="20dp"
       android:clickable="true"
       android:text="@string/reset_password"
       android:textColor="@color/black"
       android:textSize="16sp"
       android:textStyle="bold"
       app:layout_constraintBottom_toTopOf="@+id/tv_signupLink"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.397"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/signup_btn"
       app:layout_constraintVertical_bias="1.0"
       tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/editTextText"
        android:layout_width="343dp"
        android:layout_height="62dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="TextViewEdits,TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>